--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,11 @@
             "Tests\\": "tests/"
         }
     },
+    "autoload": {
+        "psr-4": {
+            "Classes\\": "src/Classes"
+        }
+    },
     "config": {
         "process-timeout" : 0
     },
