got the delete functionality to work

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Classes\\": "src/Classes"
+            "Classes\\": "src/Classes/"
         }
     },
     "config": {
